photo,style is added and changed in index file

--- a/index.html
+++ b/index.html
@@ -5,8 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <img src="photo.jpg" alt="your_name" width="200px" height="300px">
+    <h3>WEB DEV COURSE</h3>
+    <p>Batch 2A</p>
+    <p>Email:me.dharmendrakarki@gmail.com</p>
+    <p>phone Number:9841706347</p>
+    <p>Assignments</p>
+    <table>
+        <tr>
+            <th>DAY</th>
+            <th>ASSSIGNMENT</th>
+            <th>CODE</th>
+            <th>DEMO</th>
+        </tr>
+        <tr>
+            <td>Day0</td>
+            <td>D0A0</td>
+            <td> <a href="https://github.com/aignitelearners/Day0Assignment0/blob/master/index.html">code</a> </td>
+            <td> <a href="https://aignitelearners.github.io/Day0Assignment0/">demo</a></td>
+        </tr>
+    </table>
+
 </body>
 </html>
