link file updated

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </tr>
         <tr>
             <td>Day0</td>
-            <td><a href="www.google.com">D0A0</a></td>
+            <td><a href="https://www.google.com">D0A0</a></td>
             <td> <a href="https://github.com/aignitelearners/Day0Assignment0/blob/master/index.html">code</a> </td>
             <td> <a href="https://aignitelearners.github.io/Day0Assignment0/">demo</a></td>
         </tr>
