--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <p>Email:me.dharmendrakarki@gmail.com</p>
     <p>phone Number:9841706347</p>
     <p>Assignments</p>
-    <table>
+    <table border="1px">
         <tr>
             <th>DAY</th>
             <th>ASSSIGNMENT</th>
@@ -23,10 +23,26 @@
         </tr>
         <tr>
             <td>Day0</td>
-            <td><a href="https://www.google.com">D0A0</a></td>
+            <td>D0A0</td>
             <td> <a href="https://github.com/aignitelearners/Day0Assignment0/blob/master/index.html">code</a> </td>
             <td> <a href="https://aignitelearners.github.io/Day0Assignment0/">demo</a></td>
         </tr>
+
+        <tr>
+            <td>Day1</td>
+            <td>D1A1</td>
+            <td> <a href="https://github.com/aignitelearners/table/blob/master/index.html"> code</a></td>
+            <td><a href="https://aignitelearners.github.io/table/">demo</a></td>
+        </tr>
+
+        <tr>
+            <td>Day2</td>
+            <td>D2A2</td>
+            <td><a href="https://github.com/aignitelearners/Assignment-3/blob/master/index.html">Code</a></td>
+            <td><a href="https://aignitelearners.github.io/Assignment-3/">Demo</a></td>
+        </tr>
+
+
     </table>
 
 </body>
